// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Expenses summary correctly with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
     
    expenses
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`Should render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
     
    expenses
     totalling 
    $1,341,552.25
  </h1>
</div>
`;
